style.css
.max-width-900{
    max-width: 900px;
}

.box{
    width: calc(100% / 7 - 10px);
    aspect-ratio: 1 / 1;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 5px;
    background-color: white;
    color: black;
    border: 2px solid black;
}

.fizz{
    background-color: blue;
    color: orange;
    border: 2px solid orange;
}

.buzz{
    background-color: gold;
    color: blue;
    border: 2px solid blue;
}

.fizzbuzz{
    background-color: greenyellow;
    color: red;
    border: 2px solid rgb(1, 83, 1);
}

